syntax = "proto3";

package compas_buff.data;

import "compas_buff/data/point.proto";
import "compas_buff/data/vector.proto";
import "compas_buff/data/line.proto";
import "compas_buff/data/element.proto";
import "compas_buff/data/frame.proto";

import "google/protobuf/any.proto";

// Check oneof
message AnyData {
  oneof data {
    PointData point = 1;
    VectorData vector = 2;
    LineData line =3;
    FrameData frame = 4;
    ElementData element = 5;
    ListData list = 6;
    DictData dict = 7;
  }
}

enum AnyDataType {
  UNKNOWN = 0;
  POINT = 1;
  VECTOR = 2;
  LINE = 3;
  FRAME = 4;
  ELEMENT = 5;
  LIST = 6;
  DICT = 7;
}

message AnyDataWrapper {
  google.protobuf.Any data = 1;
}

/** repeated serves as a list in protobuf */
message ListData {
  repeated AnyDataWrapper data = 1;
}

message DictData {
  map<string, AnyDataWrapper> data = 1;
}

/** root serialization element */
message MessageData {
  AnyDataWrapper data = 1;
}

