syntax = "proto3";

package compas_buff.data;

message VectorData {
  string guid = 1;
  string name = 2;
  float x = 3;
  float y = 4;
  float z = 5;
}
